fixed spacing around the video

--- a/css/styles.css
+++ b/css/styles.css
@@ -109,7 +109,7 @@ img {
 
 
 .responsive-container { 
-	position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; width: 80vw; max-width: 800px; margin: auto; overflow: hidden; }
+	position: relative; padding-bottom: 50%; padding-top: 0px; height: 0; width: 80vw; max-width: 800px; margin: auto; overflow: hidden; }
 .responsive-container iframe { 
 	position: absolute; top: 0; left: 0; width: 80vw; max-width: 800px; height: calc((9/16)*80vw); max-height: 450px; }
 
